Fixed loading/export paths when loading from maps.